--- a/docs/content/getting-started/how-to-query.mdx
+++ b/docs/content/getting-started/how-to-query.mdx
@@ -11,7 +11,7 @@ The plugin extends schema with new graphql types and fields. Here is a brief ove
 - interface type which represents a single block
 - base for all other object block types
 
-Since `Block` is an interface you have to use spread syntax in your queries if you want to taget specific block type, for example for `core/paragraph` block, the representing graphql object type is called `CoreParagraphBlock` and the syntax for querying is:
+Since `Block` is an interface you have to use spread syntax in your queries if you want to target specific block type, for example for `core/paragraph` block, the representing graphql object type is called `CoreParagraphBlock` and the syntax for querying is:
 
 ```graphql
 # ...
