--- a/docs/content/getting-started/overview.mdx
+++ b/docs/content/getting-started/overview.mdx
@@ -5,7 +5,7 @@ description: Brief introduction into plugin's internals
 
 ## Gutenberg codebase
 
-Gutenberg is a Javacsript browser app internally based on React framework (wrapped through the `@wordpress/element` package). It also uses its own state management module which is inspired by Redux called `@wordpress/data`. Gutenberg also provides some other generic packages under the `@wordpress` scope, which are handy for writting other Javacsript code for Wordpress, like `@wordpress/api-fetch` for using the WP REST API, or `@wordpress/scripts` tool to easily scafold your app quickly.
+Gutenberg is a Javascript browser app internally based on React framework (wrapped through the `@wordpress/element` package). It also uses its own state management module which is inspired by Redux called `@wordpress/data`. Gutenberg also provides some other generic packages under the `@wordpress` scope, which are handy for writting other Javacsript code for Wordpress, like `@wordpress/api-fetch` for using the WP REST API, or `@wordpress/scripts` tool to easily scafold your app quickly.
 
 > Check out the project's [Github page](https://github.com/WordPress/gutenberg) for more information.
 
